--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/starter.js"
+    "start": "node server/starter.js"
   },
   "repository": {
     "type": "git",
